# cs-project-2025-Anton15K

./: .gitignore  Dockerfile  README.md  docker-compose.yml  requirements.txt
.github/workflows/: backend-ci.yml  backend-smoke.yml  deploy.yml  frontend-ci.yml
Backend/: app.py  config.py  extensions.py  models.py
Backend/api/: __init__.py  attempts.py  auth.py  health.py  problems.py  ratings.py  users.py
Backend/entities/: __init__.py  attempt.py  problem.py  rating_adjustment.py  user.py
backend/: .env.example  Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt  wsgi.py
backend/app/: __init__.py  config.py
backend/app/api/: __init__.py  health.py
backend/app/extensions/: __init__.py
backend/app/models/: __init__.py  problem.py  user.py
backend/app/services/: difficulty.py
backend/tests/: conftest.py
backend/tests/api/: test_health.py
frontend/: .eslintrc.cjs  Dockerfile  package.json  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
frontend/public/: index.html
frontend/src/: App.vue  main.ts
frontend/src/components/: AppHeader.vue
frontend/src/router/: index.ts
frontend/src/services/: api.ts
frontend/src/store/: auth.ts
frontend/src/views/: AttemptView.vue  HomeView.vue  LoginView.vue  ProblemExplorerView.vue  ProfileView.vue  RegisterView.vue
infrastructure/: README.md
instruct/: IMPLEMENTATION_GUIDE.md
scripts/: test_user_requests.py
